# OptixMinecraft

./: CMakeLists.txt  Player.cpp  Player.h  README.md  VertexManager.cpp  VertexManager.h  buffer.h  changemanager.cpp  changemanager.h  main.cpp  ogt_vox.h  shader.cu  utils.h
